objects/Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DateBecameClient__c</fullName>
        <label>DateBecameClient</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Relationship_Advisor__c</fullName>
        <formula>Owner:User.FirstName  +  Owner:User.LastName</formula>
        <label>Primary Relationship Advisor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Relationship_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Relationship Contact</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Id__c</fullName>
        <displayFormat>R-{00000000}</displayFormat>
        <label>Relationship Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>TestConversion__c</fullName>
        <displayFormat>R-{00000000}</displayFormat>
        <label>TestConversion</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>TestCurrencyConversion__c</fullName>
        <label>TestCurrencyConversion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TestDateConversion__c</fullName>
        <label>TestDateConversion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TestPicklistConversion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TestPicklistConversion</label>
        <type>Checkbox</type>
    </fields>
    <label>Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>